Contrast error fixed on the nav bar

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -7,7 +7,7 @@
         display: flex;
     }
 
-    nav ul {margin-left: 10px;}
+    nav ul li {flex-basis: calc(100% / 6);}
     
     nav ul li a {
         border: none;
